--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>UIR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href=<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">>
+  <link href=<link href="<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet rel="stylesheet">>
   <link rel="stylesheet" href = "css/bootstrap.min.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -15,46 +15,50 @@
       <div class="main">
         <div class="container">
           <div class="row">
-            <div class="col-md-11">
+            <div class="col-md-12">
               <img src="img/main.jpg" alt="photo">
-              <p><a href='https://www.pac.by/' data-hover='АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ' style="color:#BBBBBB">АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ</a> УПРАВЛЕНИЕ ИНФОРМАЦИОННЫМИ РЕСУРСАМИ </p>
-                <span>Получи современное образование в сфере управления IT.</span>
+              <p><a href='https://www.pac.by/' data-hover='АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ' style="color:#BBBBBB">АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ</a></p>
+              <p class="main_page_uir">УПРАВЛЕНИЕ ИНФОРМАЦИОННЫМИ РЕСУРСАМИ</p>
+                <span class="col-md-12 big_title">Получи современное образование в сфере управления IT.</span>
               </div>
               </div>
             </div>
           </div>
         </section>
-        <section class="description_page">
-          <div class="desc">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-9">
-                  <h2> Талантливые преподаватели, увлеченные студенты, насыщенная программа обучения - это всё про нас. </h2>
-                </div>
-                <div class="col-md-12 d-flex align-items-center">
-                <img style='margin-top: 60px;'src="img/desc_photo.png">
-              </div>
-                <div class="col-md-12">
-                <p> Здесь ты реализуешь свой потенциал. </p>
-              </div>
-              </div>
-              </div>
+
+    <section class="description_page">
+      <div class="desc">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9">
+              <h2 class="pharagraph_desc pharagraph"> Талантливые преподаватели, увлеченные студенты, насыщенная программа обучения - это всё про нас. </h2>
+            </div>
+            <div class="col-md-12 d-flex align-items-center">
+              <img src="img/desc_photo.png">
+            </div>
+            <div class="col-md-12">
+              <p class="title"> Здесь ты реализуешь свой потенциал. </p>
             </div>
           </div>
-        </section>
-        <section class="subject_page">
-          <div class="sub">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-1">
+        </div>
+      </div>
+    </section>
+
+    <section class="subject_page">
+      <div class="sub">
+        <div class="container">
+          <div class="row">
+              <div class="col-md-7">
                   <img src="img/Line.png">
+                  <p class="title sub_title"> У тебя есть шанс стать специалистом сразу в трёх областях:</p>
                 </div>
-                <div class="col-md-6">
-                  <p> У тебя есть шанс стать специалистом сразу в трёх областях:</p>
-              </div>
-              <div class= "col-md-5">
+                <div class="col-md-3">
+                  <img src="img/subIT.png">
+                  <img src="img/subManagment.png">
+                  <img src="img/subEconomy.png">
 
               </div>
+
             </div>
           </div>
-        </section>
+    </section>
