--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel = "stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body>
     <section class="main_page">
@@ -52,13 +53,96 @@
                   <img src="img/Line.png">
                   <p class="title sub_title"> У тебя есть шанс стать специалистом сразу в трёх областях:</p>
                 </div>
-                <div class="col-md-3">
-                  <img src="img/subIT.png">
-                  <img src="img/subManagment.png">
-                  <img src="img/subEconomy.png">
-
+                <div class="col-md-1">
+                  <img class="sub_ImgIT" src="img/subIT.png">
               </div>
-
+              <div class="col-md-1">
+                <img class="sub_ImgManagment" src="img/subManagment.png">
+            </div>
+            <div class="col-md-1">
+              <img class="sub_ImgEconomy" src="img/subEconomy.png">
             </div>
           </div>
+        </div>
+      </div>
     </section>
+
+
+    <section class="why_uir">
+      <div class="container">
+        <div class="row title_why">
+          <div class="col-md-12">
+              <p class="title">Почему УИР?</p>
+          </div>
+          <div class="list ">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s">
+              <div class="col-md-1">
+                <img src="img/icon_why.png">
+              </div>
+              <div class="col-md-11 text1">
+                <p class="pharagraph">Возможность прохождения практики в ведущих IT- компаниях.</p>
+              </div>
+            </div>
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
+              <div class="col-md-1">
+                <img src="img/icon_why.png">
+              </div>
+              <div class="col-md-11 text1">
+                <p class="pharagraph ">Интенсивная языковая подготовка(изучение английского языка на протяжении 3 курсов обучения).</p>
+              </div>
+            </div>
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
+              <div class="col-md-1">
+                <img src="img/icon_why.png">
+              </div>
+              <div class="col-md-11 text1">
+                <p class="pharagraph ">Практическая направленность обучения, яркая студенческая жизнь.</p>
+              </div>
+            </div>
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
+              <div class="col-md-1">
+                <img src="img/icon_why.png">
+              </div>
+              <div class="col-md-11 text1">
+                <p class="pharagraph ">Овладение современными информационными технологиями и системами для управления, экономики и бизнеса.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="materials">
+      <div class="container">
+        <div class="row materials_title">
+          <div class="col-md-12">
+              <p class="title">Наши студенты изучают:</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="pharagraph">WEB-дизайн и компьютерная графика</p>
+            <p class="pharagraph">WEB-программирование</p>
+            <p class="pharagraph">Алгоритмизация и программирование</p>
+            <p class="pharagraph">Информационные технологии в бизнесе</p>
+            <p class="pharagraph">Информационные ресурсы</p>
+            <p class="pharagraph">Информационный менеджмент</p>
+            <p class="pharagraph">Моделирование управленческих решений</p>
+            <p class="pharagraph">Операционные системы и компьютерные сети</p>
+            <p class="pharagraph">Управление IT-проектами</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="counter">
+      <div class="container">
+      </div>
+    </section>
+    <script src="js/wow.js"></script>
+              <script>
+              new WOW().init();
+              </script>
+
+</body>
