--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <p class="title">Почему УИР?</p>
           </div>
           <div class="list ">
-            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="3s">
               <div class="col-md-1">
                 <img src="img/icon_why.png">
               </div>
@@ -83,7 +83,7 @@
                 <p class="pharagraph">Возможность прохождения практики в ведущих IT- компаниях.</p>
               </div>
             </div>
-            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="3s" data-wow-offset="15">
               <div class="col-md-1">
                 <img src="img/icon_why.png">
               </div>
@@ -91,7 +91,7 @@
                 <p class="pharagraph ">Интенсивная языковая подготовка(изучение английского языка на протяжении 3 курсов обучения).</p>
               </div>
             </div>
-            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="3s" data-wow-offset="15">
               <div class="col-md-1">
                 <img src="img/icon_why.png">
               </div>
@@ -99,7 +99,7 @@
                 <p class="pharagraph ">Практическая направленность обучения, яркая студенческая жизнь.</p>
               </div>
             </div>
-            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="3s" data-wow-offset="15">
               <div class="col-md-1">
                 <img src="img/icon_why.png">
               </div>
@@ -122,16 +122,25 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <p class="pharagraph">WEB-дизайн и компьютерная графика</p>
-            <p class="pharagraph">WEB-программирование</p>
-            <p class="pharagraph">Алгоритмизация и программирование</p>
-            <p class="pharagraph">Информационные технологии в бизнесе</p>
-            <p class="pharagraph">Информационные ресурсы</p>
-            <p class="pharagraph">Информационный менеджмент</p>
-            <p class="pharagraph">Моделирование управленческих решений</p>
-            <p class="pharagraph">Операционные системы и компьютерные сети</p>
-            <p class="pharagraph">Управление IT-проектами</p>
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s">WEB-дизайн и компьютерная графика</p>
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>WEB-программирование</p>
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Алгоритмизация и программирование</p>
           </div>
+        </div>
+        <div class="row" style='margin-left:250px;  margin-top:20px'>
+          <div class="col-md-8">
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s">Информационные технологии в бизнесе</p>
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Информационные ресурсы</p>
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Информационный менеджмент</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12" style='margin-left:480px; margin-top:20px'>
+          <p class="pharagraph wow slideInLeft" data-wow-duration="2s">Моделирование управленческих решений</p>
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Операционные системы и компьютерные сети</p>
+            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Управление IT-проектами</p>
+          </div>
+        </div>
         </div>
       </div>
     </section>
