--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel = "stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section class="main_page">
@@ -83,7 +84,7 @@
                 <p class="pharagraph">Возможность прохождения практики в ведущих IT- компаниях.</p>
               </div>
             </div>
-            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="3s" data-wow-offset="15">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
               <div class="col-md-1">
                 <img src="img/icon_why.png">
               </div>
@@ -91,7 +92,7 @@
                 <p class="pharagraph ">Интенсивная языковая подготовка(изучение английского языка на протяжении 3 курсов обучения).</p>
               </div>
             </div>
-            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="3s" data-wow-offset="15">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
               <div class="col-md-1">
                 <img src="img/icon_why.png">
               </div>
@@ -99,7 +100,7 @@
                 <p class="pharagraph ">Практическая направленность обучения, яркая студенческая жизнь.</p>
               </div>
             </div>
-            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="3s" data-wow-offset="15">
+            <div class="row list1 align-items-center wow fadeInDown" data-wow-duration="2s" data-wow-offset="15">
               <div class="col-md-1">
                 <img src="img/icon_why.png">
               </div>
@@ -122,30 +123,50 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s">WEB-дизайн и компьютерная графика</p>
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>WEB-программирование</p>
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Алгоритмизация и программирование</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s">WEB-дизайн и компьютерная графика</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" style='margin-top:-10px'>WEB-программирование</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" style='margin-top:-10px'>Алгоритмизация и программирование</p>
           </div>
         </div>
         <div class="row" style='margin-left:250px;  margin-top:20px'>
           <div class="col-md-8">
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s">Информационные технологии в бизнесе</p>
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Информационные ресурсы</p>
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Информационный менеджмент</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Информационные технологии в бизнесе</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20"style='margin-top:-10px'>Информационные ресурсы</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20" style='margin-top:-10px'>Информационный менеджмент</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12" style='margin-left:480px; margin-top:20px'>
-          <p class="pharagraph wow slideInLeft" data-wow-duration="2s">Моделирование управленческих решений</p>
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Операционные системы и компьютерные сети</p>
-            <p class="pharagraph wow slideInLeft" data-wow-duration="2s" style='margin-top:-10px'>Управление IT-проектами</p>
+          <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Моделирование управленческих решений</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20" style='margin-top:-10px'>Операционные системы и компьютерные сети</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20" style='margin-top:-10px'>Управление IT-проектами</p>
           </div>
         </div>
         </div>
       </div>
     </section>
-
     <section class="counter">
+      <div class="container">
+        <div class="row numbers justify-content-between">
+          <div class="d-flex ">
+          <div class="col-4">
+            <p class="number">2003</p>
+            <p class="number_desc pharagraph">Год создания специальности</p>
+          </div>
+          <div class="col-4">
+            <p class="number">854+</p>
+            <p class="number_desc pharagraph">Выпускников</p>
+          </div>
+          <div class="col-4">
+            <p class="number">20+</p>
+            <p class="number_desc pharagraph">Компаний счастливы работать с нашими студентамии</p>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="animation">
       <div class="container">
       </div>
     </section>
@@ -153,5 +174,8 @@
               <script>
               new WOW().init();
               </script>
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 </body>
