--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <title>UIR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href=<link href="<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet rel="stylesheet">>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">>
   <link rel="stylesheet" href = "css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel = "stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
@@ -147,28 +146,7 @@
     </section>
 
 
-    <section class="counter">
-      <div class="container">
-        <div class="row numbers justify-content-between">
-          <div class="d-flex ">
-          <div class="col-4">
-            <p class="number">2003</p>
-            <p class="number_desc pharagraph">Год создания специальности.</p>
-          </div>
-          <div class="col-4">
-            <p class="number">854+</p>
-            <p class="number_desc pharagraph">Выпускников.</p>
-          </div>
-          <div class="col-4">
-            <p class="number">20+</p>
-            <p class="number_desc pharagraph">Компаний счастливы работать с нашими студентамии</p>
-          </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="counter">
+    <section class="counter" id="number">
       <div class="container">
         <div class="row numbers justify-content-between">
           <div class="d-flex ">
@@ -177,11 +155,11 @@
             <p class="number_desc pharagraph">Год создания специальности</p>
           </div>
           <div class="col-4">
-            <p class="number">854+</p>
+            <p class="number">854</p>
             <p class="number_desc pharagraph">Выпускников</p>
           </div>
           <div class="col-4">
-            <p class="number">20+</p>
+            <p class="number">20</p>
             <p class="number_desc pharagraph">Компаний счастливы работать с нашими студентамии</p>
           </div>
           </div>
@@ -197,8 +175,9 @@
               <script>
               new WOW().init();
               </script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+              <script src="https://yastatic.net/jquery/3.1.0/jquery.min.js"></script>
+              <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.1.0.min.js"><\/script>')</script>
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
 </body>
