--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
         <div class="row justify-content-between d-flex">
           <div class="col-md-4">
-            <img src="img/epam_st.png">
+            <a class="epam"><img src="img/epam_st.png"></a>
           </div>
           <div class="col-md-4">
             <img src="img/bps_st.png">
@@ -299,39 +299,22 @@
       </div>
     </section>
 
-<section class="footer">
-  <div class="container">
-    <div class="row icons justify-content-between d-flex">
-      <div class="col-md-3">
-        <img src="img/icon_vk.png">
-      </div>
-      <div class="col-md-3">
-        <img src="img/icon_inst.png">
-      </div>
-    </div>
-  </div>
-</section>
 
-    <section class="counter">
-      <div class="container">
-        <div class="row numbers justify-content-between">
-          <div class="d-flex ">
-          <div class="col-4">
-            <p class="number">2003</p>
-            <p class="number_desc pharagraph">Год создания специальности</p>
-          </div>
-          <div class="col-4">
-            <p class="number">854+</p>
-            <p class="number_desc pharagraph">Выпускников</p>
-          </div>
-          <div class="col-4">
-            <p class="number">20+</p>
-            <p class="number_desc pharagraph">Компаний счастливы работать с нашими студентамии</p>
-          </div>
-          </div>
+
+  <section class="footer">
+    <div class="container">
+      <div class="row icons justify-content-between d-flex">
+        <div class="col-md-2">
+          <p ><a href="https://vk.com/uirby_2015"><img class="icon_vk" src="img/icon_vk.png" ></a></p>
+        </div>
+        <div class="col-md-2">
+          <p ><a href="https://www.instagram.com/uir.by/"><img class="icon_inst" src="img/icon_inst.png" ></a></p>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
+
+
 
     <section class="animation">
       <div class="container">
