--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <img src="img/main.jpg" alt="photo">
               <p><a href='https://www.pac.by/' data-hover='АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ' style="color:#BBBBBB">АКАДЕМИЯ УПРАВЛЕНИЯ ПРИ ПРЕЗИДЕНТЕ РЕСПУБЛИКИ БЕЛАРУСЬ</a></p>
               <p class="main_page_uir">УПРАВЛЕНИЕ ИНФОРМАЦИОННЫМИ РЕСУРСАМИ</p>
-                <span class="col-md-12 big_title">Получи современное образование в сфере управления IT.</span>
+                <span class="col-md-12 big_title">Получи современное образование в сфере управления IT</span>
               </div>
               </div>
             </div>
@@ -120,28 +120,30 @@
               <p class="title">Наши студенты изучают:</p>
           </div>
         </div>
+        <div class="all_mat">
         <div class="row">
           <div class="col-md-12">
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s">WEB-дизайн и компьютерная графика</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" style='margin-top:-10px'>WEB-программирование</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" style='margin-top:-10px'>Алгоритмизация и программирование</p>
-          </div>
-        </div>
-        <div class="row" style='margin-left:250px;  margin-top:20px'>
-          <div class="col-md-8">
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Информационные технологии в бизнесе</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20"style='margin-top:-10px'>Информационные ресурсы</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20" style='margin-top:-10px'>Информационный менеджмент</p>
+            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s">WEB-дизайн и компьютерная графика</p>
+            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s">WEB-программирование</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s">Алгоритмизация и программирование</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12" style='margin-left:480px; margin-top:20px'>
-          <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Моделирование управленческих решений</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20" style='margin-top:-10px'>Операционные системы и компьютерные сети</p>
-            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20" style='margin-top:-10px'>Управление IT-проектами</p>
+          <div class="col-md-12 mat2">
+            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Информационные технологии в бизнесе</p>
+            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Информационные ресурсы</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Информационный менеджмент</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 mat3">
+          <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Моделирование управленческих решений</p>
+            <p class="pharagraph wow slideInRight padd_mat" data-wow-duration="2s" data-wow-offset="20">Операционные системы и компьютерные сети</p>
+            <p class="pharagraph wow slideInRight" data-wow-duration="2s" data-wow-offset="20">Управление IT-проектами</p>
           </div>
         </div>
         </div>
+      </div>
       </div>
     </section>
 
