--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">>
   <link rel="stylesheet" href = "css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel = "stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="./css/owl.theme.default.min.css">
+  <link rel = "stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
