--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>UIR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">>
-  <link rel="stylesheet" href = "css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel = "stylesheet" href="css/main.css">
+  <link rel="stylesheet" href = "CSS/bootstrap.min.css">
+	<link rel="stylesheet" href="CSS/owl.theme.default.min.css">
+  <link rel = "stylesheet" href="CSS/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -322,7 +322,7 @@
       <div class="container">
       </div>
     </section>
-    <script src="js/wow.js"></script>
+    <script src="JS/wow.js"></script>
               <script>
               new WOW().init();
               </script>
@@ -331,5 +331,5 @@
             <!--  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.1.0.min.js"></script>')</script>-->
               <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+<script src="JS/main.js"></script>
 </body>
