--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       <div class="container">
       </div>
     </section>
-    <script src="JS/wow.js"></script>
+    <script src="js/wow.js"></script>
               <script>
               new WOW().init();
               </script>
@@ -331,5 +331,5 @@
             <!--  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.1.0.min.js"></script>')</script>-->
               <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="JS/main.js"></script>
+<script src="js/main.js"></script>
 </body>
